refactor(projects_page): change css

--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/projects.css">
 </head>
 <div id="geral_container">
-    <div id="projets_container">
+    <div id="projects_container">
         <h1>Projects</h1>
         <div id="project_search_container">
             <label for="project_search_input">
@@ -17,7 +18,7 @@
             </label>
             <button class="project_search_input_item" id="project_search_button">Search</button>
         </div>
-        <div id="projets_box">
+        <div id="projects_box">
             <div id="projects_buttons_container">
                 <button class="projects_buttons_container_item">Date cresc</button>
                 <button class="projects_buttons_container_item">Date desce</button>
