refactor(change_html): css and html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div id="geral_container">
         <div id="home_container">
             <h1>Home</h1>
+            <ul id="menu">
+                <li class="menu_item"><a href="./index.html">Home</a></li>
+                <li class="menu_item"><a href="./projects.html">Projects</a></li>
+                <li class="menu_item"><a href="./contact.html">Contact Me</a></li>
+            </ul>
         </div>
     </div>
 </body>
