--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,11 @@
 <div id="geral_container">
     <div id="projects_container">
         <h1>Projects</h1>
+        <ul id="menu">
+            <li class="menu_item"><a href="./index.html">Home</a></li>
+            <li class="menu_item"><a href="./projects.html">Projects</a></li>
+            <li class="menu_item"><a href="./contact.html">Contact Me</a></li>
+        </ul>
         <div id="project_search_container">
             <label for="project_search_input">
                 <input type="text" id="project_search_input" class="project_search_input_item">
@@ -20,8 +25,9 @@
         </div>
         <div id="projects_box">
             <div id="projects_buttons_container">
-                <button class="projects_buttons_container_item">Date cresc</button>
-                <button class="projects_buttons_container_item">Date desce</button>
+                Order by
+                <button class="projects_buttons_container_item">Date crescent</button>
+                <button class="projects_buttons_container_item">Date descending</button>
             </div>
             <div class="project_box">
                 <h3 class="project_title">
