feat(fetch_projects): fetch all projects git

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1>Home</h1>
             <ul id="menu">
                 <li class="menu_item"><a href="./index.html">Home</a></li>
-                <li class="menu_item"><a href="./projects.html">Projects</a></li>
-                <li class="menu_item"><a href="./contact.html">Contact Me</a></li>
+                <li class="menu_item"><a href="./pages/projects.html">Projects</a></li>
+                <li class="menu_item"><a href="./pages/contact.html">Contact Me</a></li>
             </ul>
         </div>
     </div>
