--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
     <div id="geral_container">
         <div id="contact_container">
             <h1>Contact Me</h1>
             <ul id="menu">
-                <li class="menu_item"><a href="./index.html">Home</a></li>
+                <li class="menu_item"><a href="../index.html">Home</a></li>
                 <li class="menu_item"><a href="./projects.html">Projects</a></li>
                 <li class="menu_item"><a href="./contact.html">Contact Me</a></li>
             </ul>
