--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/projects.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/projects.css">
 </head>
 <div id="geral_container">
     <div id="projects_container">
         <h1>Projects</h1>
         <ul id="menu">
-            <li class="menu_item"><a href="./index.html">Home</a></li>
+            <li class="menu_item"><a href="../index.html">Home</a></li>
             <li class="menu_item"><a href="./projects.html">Projects</a></li>
             <li class="menu_item"><a href="./contact.html">Contact Me</a></li>
         </ul>
@@ -53,6 +53,7 @@
         </div>
     </div>
 </div>
+<script src="../js/main.js"></script>
 </body>
 
 </html>
